# taller_de_prog_2

./: .gitignore  Git Shell Commands.txt  Links Importantes.txt  README.md  README.txt  Test Subida  Trabajo Práctico - Grupo 3 - Entrega Final.odt  Trabajo Práctico - Grupo 3.odt  Trabajo Práctico - Grupo 4.odt  Tutorial - CMake.txt
ApiTests/: rest_tester.py  test_user_authentication.py
Documentación/: Makefile  conf.py  index.rst  index.rst~  make.bat
Documentación/_build/doctrees/: environment.pickle  index.doctree
Documentación/_build/html/: .buildinfo  genindex.html  index.html  nosotros.html  objects.inv  search.html  searchindex.js
Documentación/javadocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
Documentación/javadocs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Enunciado/: 2015.1C.2015.MensajerO.docx
coverage/: results.info  resultsFiltered.info
coverage/html/: index-sort-f.html  index-sort-l.html  index.html
coverage/html/src/: Clock.cpp.func-sort-c.html  Clock.cpp.func.html  Clock.cpp.gcov.html  Conversation.cpp.func-sort-c.html  Conversation.cpp.func.html  Conversation.cpp.gcov.html  Conversation_Test.cpp.func-sort-c.html  Conversation_Test.cpp.func.html  Conversation_Test.cpp.gcov.html  Database.cpp.func-sort-c.html  Database.cpp.func.html  Database.cpp.gcov.html  Database_Test.cpp.func-sort-c.html  Database_Test.cpp.func.html  Database_Test.cpp.gcov.html  EventHandler.h.func-sort-c.html  EventHandler.h.func.html  EventHandler.h.gcov.html  Loggero.cpp.func-sort-c.html  Loggero.cpp.func.html  Loggero.cpp.gcov.html  Message.cpp.func-sort-c.html  Message.cpp.func.html  Message.cpp.gcov.html  MessageFactory.cpp.func-sort-c.html  MessageFactory.cpp.func.html  MessageFactory.cpp.gcov.html  Message_Test.cpp.func-sort-c.html  Message_Test.cpp.func.html  Message_Test.cpp.gcov.html  Proceso.cpp.func-sort-c.html  Proceso.cpp.func.html  Proceso.cpp.gcov.html  SIGINT_Handler.h.func-sort-c.html  SIGINT_Handler.h.func.html  SIGINT_Handler.h.gcov.html  Server.cpp.func-sort-c.html  Server.cpp.func.html  Server.cpp.gcov.html  ServiceLayer.cpp.func-sort-c.html  (+29 more)
doxygen/html/: Clock_8h_source.html  Constants_8h_source.html  Conversation_8h_source.html  Database_8h_source.html  EventHandler_8h_source.html  Loggero_8h_source.html  MessageFactory_8h_source.html  Message_8h_source.html  Proceso_8h_source.html  SIGINT__Handler_8h_source.html  Server_8h_source.html  ServiceLayer_8h_source.html  SignalHandler_8h_source.html  UserFactory_8h_source.html  User_8h_source.html  annotated.html  classClock-members.html  classClock.html  classConstants-members.html  classConstants.html  classConversation-members.html  classConversation.html  classDatabase-members.html  classDatabase.html  classEventHandler-members.html  classEventHandler.html  classLoggero-members.html  classLoggero.html  classMessage-members.html  classMessage.html  classMessageFactory-members.html  classMessageFactory.html  classProceso-members.html  classProceso.html  classSIGINT__Handler-members.html  classSIGINT__Handler.html  classServer-members.html  classServer.html  classServiceLayer-members.html  classServiceLayer.html  (+12 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  (+10 more)
doxygen/latex/: annotated.tex  classClock.tex  classConstants.tex  classConversation.tex  classDatabase.tex  classEventHandler.eps  classEventHandler.tex  classLoggero.tex  classMessage.tex  classMessageFactory.tex  classProceso.eps  classProceso.tex  classSIGINT__Handler.eps  classSIGINT__Handler.tex  classServer.eps  classServer.tex  classServiceLayer.tex  classSignalHandler.tex  classUser.tex  classUserFactory.tex  hierarchy.tex  refman.tex
src/: CMakeLists.txt  Clock.cpp  Clock.h  Constants.h  Conversation.cpp  Conversation.h  Conversation_Test.cpp  Database.cpp  Database.h  Database_Test.cpp  Logger.cpp  Logger.h  Loggero.cpp  Loggero.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  Message_Test.cpp  Proceso.cpp  Proceso.h  SIGINT_Handler.h  Server.cpp  Server.h  ServiceLayer.cpp  ServiceLayer.h  ServiceLayer_Test.cpp  SignalHandler.cpp  SignalHandler.h  User.cpp  User.h  UserFactory.cpp  UserFactory.h  UserFactory_Test.cpp  User_Test.cpp  doxy  holaMundoServer.cpp  jsoncpp.cpp  mongoose.c  testRocks.cpp
src/json/: json.h
(+70 files in other folders)
